--- a/flaskapp/templates/home.html
+++ b/flaskapp/templates/home.html
@@ -110,16 +110,16 @@
             </div>
             <div class="col-lg-4">
                 <div class="mx-auto testimonial-item mb-5 mb-lg-0"><img class="rounded-circle img-fluid mb-3"
-                        src="../static/img/tejaswini.jpeg">
-                    <h5>Tejaswini Thota</h5>
+                        src="../static/img/aditi.png">
+                    <h5>Aditi Rai</h5>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="mx-auto testimonial-item mb-6 mb-lg-0"><img class="rounded-circle img-fluid mb-3"
-                        src="../static/img/reuben.jpeg">
-                    <h5>Reuben Stephen John</h5>
+        <div class="row" style="display: flex;justify-content: center;">
+            <div class="col-lg-6 " style="flex:1;">
+                <div class="mx-auto testimonial-item mb-6 mb-lg-0 "><img class="rounded-circle img-fluid mb-3 "
+                        src="../static/img/abhi.jpg">
+                    <h5>Abhishek Kumar</h5>
                 </div>
             </div>
 
